syntax = "proto3";

option csharp_namespace = "Nvovka.CommandManager.Authentication";

package login;

// Define the Login service
service UserLoginService {
  rpc Login (LoginRequest) returns (LoginReply);
}

// Define the request message
message LoginRequest {
  string username = 1;
  string password = 2;
}

// Define the reply message
message LoginReply {
  string message = 1;
  bool success = 2;
}
